Set a custom primary color

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,7 @@
 // custom variables before bootstrap imports
 
+$primary: #009ff7;
+
 @import '../../node_modules/bootstrap/scss/bootstrap';
 @import '../../node_modules/bootstrap-vue/src/index.scss';
 
