--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -5,6 +5,10 @@ $primary: #009ff7;
 @import '../../node_modules/bootstrap/scss/bootstrap';
 @import '../../node_modules/bootstrap-vue/src/index.scss';
 
+html {
+    font-size: 16px;
+}
+
 #app {
     font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
