(style) Fixed width issues after font size change
Why:
- Things were breaking visually

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -91,3 +91,13 @@ td {
 .table-wrapper {
     min-height: 35rem;
 }
+
+.dropdown-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    :last-child {
+        margin-left: .5rem;
+    }
+}
